--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
 
         <header id="header">
-            <img class="img1" id="logo" src="/media/logo.png" alt="" onclick="redirection('logo')">
+            <img class="img1" id="logo" src="media/logo.png" alt="" onclick="redirection('logo')">
 
             <div class="center-element" style="width: 575.52px; height: 48.11px; position: relative">
                 <img style=" color:#93939A; font-family: manrope; display: flex; justify-content: center; align-items: center; width: 575.52px; height: 48.11px; left: 0px; top: 0px; position: absolute;"
