--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div class="signup" onclick="redirection('signup')" id="re-signup">Signup</div>
             </div>
 
-            <div class="last-element">
+            <div class="last-element" onclick="redirection('login')">
                 <div class="login-button" id="login-button" onclick="redirection('login')">
-                    <p>Login</p>
+                    <p onclick="redirection('login')">Login</p>
                 </div>
             </div>
 
@@ -62,9 +62,9 @@
                 </div>
             </div>
 
-            <div class="login-btn">
+            <div class="login-btn" onclick="redirection('login')">
                 <div class="i-login-btn" onclick="redirection('login')" id="i-login-btn">
-                    <a href="">Login</a>
+                    <a href="" onclick="redirection('login')">Login</a>
                 </div>
             </div>
         </div>
