--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="menus" id="menus">
 
-            <img class="img4" src="/media/logoW.png" alt="">
+            <img class="img4" src="media/logoW.png" alt="">
             <i id="close-button" class="fas fa-times"></i>
 
             <div class="options">
@@ -87,6 +87,10 @@
 
             <div class="div-dc">
                 <img src="media/connected-dots.png" alt="">
+            </div>
+
+            <div class="div-dcs">
+                <img src="media/connected-dots2.png" alt="">
             </div>
         </div>
 
