--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             <div class="div-dcs">
                 <img src="media/connected-dots2.png" alt="">
             </div>
+
+            <img class="hwd" src="media/Frame 71.png" alt="">
         </div>
 
     </main>
