--- a/index.html
+++ b/index.html
@@ -86,14 +86,26 @@
             <div class="text1">With Loops Social life made simple  </div>
 
             <div class="div-dc">
-                <img src="media/connected-dots.png" alt="">
+                <img src="media/connected-wdh.png" alt="">
             </div>
 
             <div class="div-dcs">
                 <img src="media/connected-dots2.png" alt="">
             </div>
+        </div>
 
-            <img class="hwd" src="media/Frame 71.png" alt="">
+        <br>
+        <br>
+
+        <div class="sec-div">
+
+            <div class="sec-div-text1">Awesome matches for everyone based on their interests</div>
+
+            <br>
+            <br>
+            <br>
+
+            <div class="sec-div-text2">Explore our subscription plans to enhance <br> your dating experience</div>
         </div>
 
     </main>
