--- a/html/homepage.html
+++ b/html/homepage.html
@@ -4,24 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LoopSocial</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/home.css">
 </head>
 
 <body>
-    <main>
-        <div class="sidenavbar" id="sidenavbar">
+    <main id="main">
+        <aside>
             <div class="innernavbar">
                 <img class="logo" src="../media/logo.png" alt="">
 
                 <div class="navbaroptions">
-
                     <p class="menutext">Menu</p>
-
                     <br>
                     <br>
-
                     <div class="option">
                         <svg width="30" height="25" viewBox="0 0 34 29" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -30,16 +25,6 @@
                         </svg>
 
                         <p>Browse</p>
-                    </div>
-
-                    <div class="option">
-                        <svg width="30" height="26" viewBox="0 0 34 32" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M24.5007 0.738281C21.6007 0.738281 18.8173 2.11591 17.0007 4.29291C15.184 2.11591 12.4007 0.738281 9.50065 0.738281C4.36732 0.738281 0.333984 4.85417 0.333984 10.0926C0.333984 16.5215 6.00065 21.7599 14.584 29.7196L17.0007 31.9476L19.4173 29.7026C28.0007 21.7599 33.6673 16.5215 33.6673 10.0926C33.6673 4.85417 29.634 0.738281 24.5007 0.738281ZM17.1673 27.1854L17.0007 27.3555L16.834 27.1854C8.90065 19.855 3.66732 15.0078 3.66732 10.0926C3.66732 6.69101 6.16732 4.13984 9.50065 4.13984C12.0673 4.13984 14.5673 5.82361 15.4507 8.15368H18.5673C19.434 5.82361 21.934 4.13984 24.5007 4.13984C27.834 4.13984 30.334 6.69101 30.334 10.0926C30.334 15.0078 25.1007 19.855 17.1673 27.1854Z"
-                                fill="#848484" />
-                        </svg>
-
-                        <p>Liked</p>
                     </div>
 
                     <div class="option">
@@ -52,12 +37,6 @@
 
                         <p>Universe</p>
                     </div>
-
-                    <p class="socialtext">Social</p>
-
-                    <br>
-                    <br>
-
                     <div class="option">
                         <svg width="30" height="25" viewBox="0 0 28 29" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -67,51 +46,43 @@
 
                         <p>Friends</p>
                     </div>
-
-                    <div class="option">
-                        <svg width="30" height="22" viewBox="0 0 40 22" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M6.66667 12.8019C8.5 12.8019 10 11.2712 10 9.40038C10 7.52953 8.5 5.99882 6.66667 5.99882C4.83333 5.99882 3.33333 7.52953 3.33333 9.40038C3.33333 11.2712 4.83333 12.8019 6.66667 12.8019ZM8.55 14.6728C7.93333 14.5708 7.31667 14.5027 6.66667 14.5027C5.01667 14.5027 3.45 14.8599 2.03333 15.4892C0.8 16.0334 0 17.258 0 18.6356L0 21.3058H7.5L7.5 18.5676C7.5 17.1559 7.88333 15.8293 8.55 14.6728ZM33.3333 12.8019C35.1667 12.8019 36.6667 11.2712 36.6667 9.40038C36.6667 7.52953 35.1667 5.99882 33.3333 5.99882C31.5 5.99882 30 7.52953 30 9.40038C30 11.2712 31.5 12.8019 33.3333 12.8019ZM40 18.6356C40 17.258 39.2 16.0334 37.9667 15.4892C36.55 14.8599 34.9833 14.5027 33.3333 14.5027C32.6833 14.5027 32.0667 14.5708 31.45 14.6728C32.1167 15.8293 32.5 17.1559 32.5 18.5676V21.3058L40 21.3058V18.6356ZM27.0667 13.9074C25.1167 13.023 22.7167 12.3767 20 12.3767C17.2833 12.3767 14.8833 13.0401 12.9333 13.9074C11.1333 14.7238 10 16.5607 10 18.5676V21.3058L30 21.3058V18.5676C30 16.5607 28.8667 14.7238 27.0667 13.9074ZM13.45 17.9043C13.6 17.5131 13.6667 17.241 14.9667 16.7307C16.5833 16.0844 18.2833 15.7783 20 15.7783C21.7167 15.7783 23.4167 16.0844 25.0333 16.7307C26.3167 17.241 26.3833 17.5131 26.55 17.9043H13.45ZM20 4.29804C20.9167 4.29804 21.6667 5.06339 21.6667 5.99882C21.6667 6.93425 20.9167 7.6996 20 7.6996C19.0833 7.6996 18.3333 6.93425 18.3333 5.99882C18.3333 5.06339 19.0833 4.29804 20 4.29804ZM20 0.896484C17.2333 0.896484 15 3.17553 15 5.99882C15 8.82212 17.2333 11.1012 20 11.1012C22.7667 11.1012 25 8.82212 25 5.99882C25 3.17553 22.7667 0.896484 20 0.896484Z"
-                                fill="#848484" />
-                        </svg>
-
-                        <p>Parties</p>
-                    </div>
-
                     <p class="generaltext">General</p>
-
                     <br>
                     <br>
+                    <div class="option" id="userdetailsoption">
 
+                    </div>
                     <div class="option">
                         <svg width="30" height="25" viewBox="0 0 34 35" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M29.384 19.5164C29.4507 18.9721 29.5007 18.4279 29.5007 17.8496C29.5007 17.2713 29.4507 16.7271 29.384 16.1828L32.9007 13.3765C33.2174 13.1214 33.3007 12.6622 33.1007 12.288L29.7674 6.40335C29.6174 6.13122 29.334 5.97815 29.034 5.97815C28.934 5.97815 28.834 5.99516 28.7507 6.02918L24.6007 7.72995C23.734 7.04964 22.8007 6.48839 21.784 6.06319L21.1507 1.55612C21.1007 1.14794 20.7507 0.841797 20.334 0.841797L13.6674 0.841797C13.2507 0.841797 12.9007 1.14794 12.8507 1.55612L12.2174 6.06319C11.2007 6.48839 10.2674 7.06665 9.40071 7.72995L5.25071 6.02918C5.15071 5.99516 5.05071 5.97815 4.95071 5.97815C4.66738 5.97815 4.38404 6.13122 4.23404 6.40335L0.900709 12.288C0.684042 12.6622 0.784042 13.1214 1.10071 13.3765L4.61738 16.1828C4.55071 16.7271 4.50071 17.2883 4.50071 17.8496C4.50071 18.4109 4.55071 18.9721 4.61738 19.5164L1.10071 22.3226C0.784042 22.5778 0.700709 23.037 0.900709 23.4111L4.23404 29.2958C4.38404 29.568 4.66738 29.721 4.96738 29.721C5.06738 29.721 5.16738 29.704 5.25071 29.67L9.40071 27.9692C10.2674 28.6495 11.2007 29.2108 12.2174 29.636L12.8507 34.1431C12.9007 34.5512 13.2507 34.8574 13.6674 34.8574H20.334C20.7507 34.8574 21.1007 34.5512 21.1507 34.1431L21.784 29.636C22.8007 29.2108 23.734 28.6325 24.6007 27.9692L28.7507 29.67C28.8507 29.704 28.9507 29.721 29.0507 29.721C29.334 29.721 29.6174 29.568 29.7674 29.2958L33.1007 23.4111C33.3007 23.037 33.2174 22.5778 32.9007 22.3226L29.384 19.5164ZM26.084 16.608C26.1507 17.1353 26.1674 17.4924 26.1674 17.8496C26.1674 18.2068 26.134 18.5809 26.084 19.0912L25.8507 21.013L27.334 22.2036L29.134 23.6322L27.9674 25.6902L25.8507 24.8228L24.1174 24.1085L22.6174 25.265C21.9007 25.8092 21.2174 26.2174 20.534 26.5066L18.7674 27.2379L18.5007 29.1598L18.1674 31.4558H15.834L15.5174 29.1598L15.2507 27.2379L13.484 26.5066C12.7674 26.2004 12.1007 25.8092 11.434 25.299L9.91738 24.1085L8.15071 24.8398L6.03404 25.7072L4.86738 23.6493L6.66738 22.2206L8.15071 21.0301L7.91738 19.1082C7.86738 18.5809 7.83404 18.1897 7.83404 17.8496C7.83404 17.5094 7.86738 17.1183 7.91738 16.608L8.15071 14.6861L6.66738 13.4956L4.86738 12.0669L6.03404 10.009L8.15071 10.8764L9.88404 11.5907L11.384 10.4342C12.1007 9.88994 12.784 9.48176 13.4674 9.19262L15.234 8.46129L15.5007 6.53941L15.834 4.24336L18.1507 4.24336L18.4674 6.53941L18.734 8.46129L20.5007 9.19262C21.2174 9.49877 21.884 9.88994 22.5507 10.4002L24.0674 11.5907L25.834 10.8594L27.9507 9.99199L29.1174 12.0499L27.334 13.4956L25.8507 14.6861L26.084 16.608ZM17.0007 11.0465C13.3174 11.0465 10.334 14.0909 10.334 17.8496C10.334 21.6083 13.3174 24.6527 17.0007 24.6527C20.684 24.6527 23.6674 21.6083 23.6674 17.8496C23.6674 14.0909 20.684 11.0465 17.0007 11.0465ZM17.0007 21.2512C15.1674 21.2512 13.6674 19.7205 13.6674 17.8496C13.6674 15.9787 15.1674 14.448 17.0007 14.448C18.834 14.448 20.334 15.9787 20.334 17.8496C20.334 19.7205 18.834 21.2512 17.0007 21.2512Z"
                                 fill="#848484" />
                         </svg>
-
                         <p>Profile Settings</p>
                     </div>
-
                     <div class="option">
                         <svg width="30" height="23" viewBox="0 0 30 31" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M11.8167 21.5906L14.1667 23.9887L22.5 15.4848L14.1667 6.98085L11.8167 9.37895L16.1167 13.784L0 13.784L0 17.1855L16.1167 17.1855L11.8167 21.5906ZM26.6667 0.177734L3.33333 0.177734C1.48333 0.177734 0 1.70844 0 3.57929L0 10.3824H3.33333L3.33333 3.57929L26.6667 3.57929L26.6667 27.3902L3.33333 27.3902L3.33333 20.5871H0L0 27.3902C0 29.2611 1.48333 30.7918 3.33333 30.7918L26.6667 30.7918C28.5 30.7918 30 29.2611 30 27.3902L30 3.57929C30 1.70844 28.5 0.177734 26.6667 0.177734Z"
                                 fill="#848484" />
                         </svg>
-
                         <p>Log out</p>
                     </div>
+
+
                 </div>
             </div>
-        </div>
-
-        <div class="userdetails">
-        </div>
-
-        <div class="messagebar">
-            <div class="message-inner">
-                <div class="message-toggle">
+        </aside>
+        <section>
+            <div class="top-navbar">
+                <img class="navbarimg" src="../media/logo.png" alt="">
+                <svg id="arrowsvg" width="15" height="15" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M0.21957 17.2911L1.9254 18.9873L11.4033 9.49981L1.91582 0.012307L0.219569 1.70856L8.01082 9.49981L0.21957 17.2911Z"
+                        fill="#848484" />
+                </svg>
+                <div class="userdetails" id="userdetails"></div>
+                <div class="message-togglel">
                     <svg width="20" height="20" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M3.33333 3.33333H30V23.3333H5.28333L3.33333 25.2833V3.33333ZM3.33333 0C1.5 0 0.0166667 1.5 0.0166667 3.33333L0 33.3333L6.66667 26.6667H30C31.8333 26.6667 33.3333 25.1667 33.3333 23.3333V3.33333C33.3333 1.5 31.8333 0 30 0H3.33333ZM6.66667 16.6667H20V20H6.66667V16.6667ZM6.66667 11.6667H26.6667V15H6.66667V11.6667ZM6.66667 6.66667H26.6667V10H6.66667V6.66667Z"
@@ -119,67 +90,89 @@
                     </svg>
                 </div>
             </div>
-        </div>
+            <div class="main-element" id="main-element">
+                <div id="elements">
+                    <div class="swipe-text">
+                        <p>Swipes</p>
+                        <img src="../media/swipeheart.png" alt="">
+                    </div>
+                    <div id="cCarousel">
+                        <div id="carousel-vp">
+                            <div class="cCarousel-inner" id="cCarousel-inner"></div>
+                        </div>
 
-        <div class="mainelement-div">
-            <div class="swipe-text">
-                <p>Swipes</p>
-                <img src="../media/swipeheart.png" alt="">
-            </div>
-            <div class="swipes">
-            </div>
-            <div class="arrows">
-                <div class="left-arrow" id="left-arrow">
-                    <svg width="15" height="15" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M11.7804 1.70895L10.0746 0.0126953L0.59668 9.50019L10.0842 18.9877L11.7804 17.2914L3.98918 9.50019L11.7804 1.70895Z" fill="#848484"/>
-                    </svg>
+                        <div class="arrows">
+                            <div class="left-arrow" id="left-arrow">
+                                <svg width="15" height="15" viewBox="0 0 12 19" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M11.7804 1.70895L10.0746 0.0126953L0.59668 9.50019L10.0842 18.9877L11.7804 17.2914L3.98918 9.50019L11.7804 1.70895Z"
+                                        fill="#000000" />
+                                </svg>
+                            </div>
+                            <div class="right-arrow" id="right-arrow">
+                                <svg width="15" height="15" viewBox="0 0 12 19" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M0.21957 17.2911L1.9254 18.9873L11.4033 9.49981L1.91582 0.012307L0.219569 1.70856L8.01082 9.49981L0.21957 17.2911Z"
+                                        fill="#000000" />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="parties-text">
+                        <p>Parties</p>
+                        <img src="../media/swipeheart.png" alt="">
+                    </div>
+                    <br>
+                    <div class="parties-cCarousel" id="parties-cCarousel">
+                        <div class="parties-carousel-vp" id="parties-carousel-vp">
+                            <div class="parties-cCarousel-inner" id="parties-cCarousel-inner"></div>
+                        </div>
+                        <div class="parties-arrows">
+                            <div class="parties-left-arrow" id="parties-left-arrow">
+                                <svg width="15" height="15" viewBox="0 0 12 19" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M11.7804 1.70895L10.0746 0.0126953L0.59668 9.50019L10.0842 18.9877L11.7804 17.2914L3.98918 9.50019L11.7804 1.70895Z"
+                                        fill="#000000" />
+                                </svg>
+                            </div>
+                            <div class="parties-right-arrow" id="parties-right-arrow">
+                                <svg width="15" height="15" viewBox="0 0 12 19" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M0.21957 17.2911L1.9254 18.9873L11.4033 9.49981L1.91582 0.012307L0.219569 1.70856L8.01082 9.49981L0.21957 17.2911Z"
+                                        fill="#000000" />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
                 </div>
-                <div class="right-arrow" id="right-arrow">
-                    <svg width="15" height="15" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0.21957 17.2911L1.9254 18.9873L11.4033 9.49981L1.91582 0.012307L0.219569 1.70856L8.01082 9.49981L0.21957 17.2911Z" fill="#848484"/>
-                    </svg>
+                <div class="addvertise-element" id="addvertise-element">
+                    <div class="addvertise-element-card">
+
+                    </div>
                 </div>
             </div>
-            <div class="parties-text">
-                <p>Parties</p>
-                <img src="../media/swipeheart.png" alt="">
-            </div>
-            <div class="parties">
-            </div>
-
-            <div class="admain-element">
-                <div class="addsection">
-                    <div class="subcribe">Subcribe</div>
-                    <div class="Detail" style="width: 270px; position: relative;top:50px">
-                        <div class="GetUnlimitedSwipes" style="left: 9%; top: 0px; position: absolute; color: black; font-size: 22px; font-family: Roboto; font-weight: 700; word-wrap: break-word">Get unlimited Swipes </div>
-                        <div class="Likes" style="left: 9%; top: 40px; position: absolute; color: black; font-size: 15px; font-family: Roboto; font-weight: 700; word-wrap: break-word">& likes</div>
-                      </div>
-                      <div class="joinbutton">Join</div>
-                      <div class="addsvg">
-                        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M23.7617 13.7383H13.6367V23.8633H10.2617V13.7383H0.136719V10.3633H10.2617V0.238281H13.6367V10.3633H23.7617V13.7383Z" fill="white"/>
-                            </svg>
-                      </div>
-                      <div class="addnextpic">
-                        <img src="../media/daredevilfangirl___BrObhz1HzmI___ (1).png" alt="">
-                        <img src="../media/daredevilfangirl___BrObhz1HzmI___ (1).png" alt="">
-                        <img src="../media/daredevilfangirl___BrObhz1HzmI___ (1).png" alt="">
-                      </div>
-
-                      <div class="imgstack">
-                        <img src="../media/smi1.png" alt="">
-                        <img src="../media/smi2.png" alt="">
-                        <img src="../media/smi3.png" alt="">
-                      </div>
-
-                      <p>+5 friends are watching</p>
+        </section>
+        <aside id="messagenavbar-aside">
+            <div class="messagebar">
+                <div class="message-inner">
+                    <div class="message-toggle">
+                        <svg width="20" height="20" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M3.33333 3.33333H30V23.3333H5.28333L3.33333 25.2833V3.33333ZM3.33333 0C1.5 0 0.0166667 1.5 0.0166667 3.33333L0 33.3333L6.66667 26.6667H30C31.8333 26.6667 33.3333 25.1667 33.3333 23.3333V3.33333C33.3333 1.5 31.8333 0 30 0H3.33333ZM6.66667 16.6667H20V20H6.66667V16.6667ZM6.66667 11.6667H26.6667V15H6.66667V11.6667ZM6.66667 6.66667H26.6667V10H6.66667V6.66667Z"
+                                fill="white" />
+                        </svg>
+                    </div>
                 </div>
             </div>
-        </div>
+        </aside>
     </main>
 
     <script src="../js/homepage.js"></script>
 </body>
 
 </html>
-
